--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 
 <body>
-	<h1 align=center> H2H Bouldering </h1>
+	<h1 align=center> ATK Climb </h1>
 <div id="uno">	
 	<div class="nav">
 		<img src="Climbingfit.png" height="200" width="200"/> <br>
