--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-	<link rel="stylesheet" type="css" href="dawg.css"/>
+	<link rel="stylesheet" type="css" href="Climbing.css"/>
 	</head>
 
 <body>
