--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 <div class="container">
 <!--Links  -->
-  <h2>Hello! </h2>
+  <h2>Welcome! </h2>
   <p>Since there is not a lot of climbing-specific training information out there, I've decided to consolidate and share most of my training knowledge in one place just for you!</p>
   <p>Below, you'll find a number of exercises that will improve your performance regardless of whether you're a beginner trying to get a fast start or an experienced one trying to get to the next level. 
   There are a few common characteristics of the exercises I have included: </p>
