--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
 <div class="container" id="p4">
 <div class="page-header"> 
-	<h1 class="bg-info"> Legs </h1>
+	<h1 class="bg-info"> Lower Body </h1>
 	</div>
   <table class = "table table-striped">
     <thead>
