--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" type="css" href="Climbingdraft.css">
+<link rel="stylesheet" type="css" href="Climbing.css">
 <!-- Social Media buttons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
