--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </nav>
 
 <div class="jumbotron">
-  <h1 class ="opener" align="center"> TAK Training</h1> 
+  <h1 class ="opener" align="center" style="color: cyan"> TAK Training</h1> 
   <p class="opener">Elevate your Rock Climbing using targeted, structured exercises to enhance performance and consistency.</p> 
 </div>
 <div class="container">
