--- a/index.html
+++ b/index.html
@@ -1,6 +1,63 @@
 <html>
 <head>
+<style>
+	#logo {
+	border: 2px solid black;
+}
 
+nav-header {
+	background-color: blue
+}
+
+.opener {
+	background-color: rgba(5,4,2,0.1);
+}
+body {
+	margin-top: 100px;
+	height: 100%
+}
+.jumbotron {
+	background-image: url("ClimbingFit2.png");
+ 	background-position: center;
+ 	background-repeat: no-repeat;
+ 	background-size: cover;
+}
+
+.jumbotron h1 {
+	color: cyan;
+	font-family: Impact;
+	letter-spacing: 2px
+	
+}
+
+.jumbotron p {
+	color: #fff
+	
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    }
+.aboutMe {
+	border: 2px solid black;
+	margin-bottom: 50px
+}
+
+.bold {
+	font-weight: bold
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+}
+
+	</style>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -33,7 +90,7 @@
 </nav>
 
 <div class="jumbotron">
-  <h1 class ="opener" align="center" style="color: cyan"> TAK Training</h1> 
+  <h1 class ="opener" align="center"> TAK Training</h1> 
   <p class="opener">Elevate your Rock Climbing using targeted, structured exercises to enhance performance and consistency.</p> 
 </div>
 <div class="container">
