--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@ body {
   <p>Below, you'll find a number of exercises that will improve your performance regardless of whether you're a beginner trying to get a fast start or an experienced one trying to get to the next level. 
   There are a few common characteristics of the exercises I have included: </p>
   <p> <span class="bold">Bodyweight Only:</span> Being able to manipulate your body is one of the most important aspects of climbing and because this is 
-  very challenging, added weight is usually unnecessary.  Also, training in this fashion reduces the need for equipment.
+  already very challenging, added weight is usually unnecessary.  Also, training in this fashion reduces the need for equipment.
   The benefits of added weight, however, include being able to execute powerful, dynamic moves and climbing with outdoor gear.  </p>
   <p>
-  <span class="bold">Free-weight:</span> By not relying on machines or other isolation movements, many muscles will be worked out at once, including your core.  This saves time and targets important areas.
-  As a result of this, however, proper form is very important. I will provide what details I can but you should consult a professional trainer if you want guaranteed injury prevention.
+  <span class="bold">Free-weight:</span> By not relying on machines or other isolating movements, many muscles will be worked out at once.  This saves time, targets relevant stabilizing muscles, and produces greater body awareness.
+  As a result of this, however, proper form is very important. I will provide details about lesser known items but supplementary form advice is always recommended.
   </p>
   <p>
   <span class="bold">Targeted:</span> While climbing can challenge almost every part of your body, it is most efficient to train only certain parts to save time/energy and prevent unnecessary mass gain.
@@ -112,21 +112,21 @@ body {
   <p>
   <span class="bold">No Finger/Tendon Exercises:</span> These will be added later.
   </p>
-  <h3> Form a plan! Pick 2-3 exercises under each of the following headers and do them 3-4 times a week.  
+  <h3> To form a plan, pick 2-3 exercises in each of the following areas and do them 3-4 times a week.  
   You should stick to these for at least ~6 weeks to see results instead of attempting "muscle confusion". </h3>
   <p class="well">If training power, complete ~5 sets each with ~5 reps. 
   Take up to ~3 minutes rest between sets.  You can take more or less time as long as you feel fully recovered before starting new sets.  
   During the following week, you should try to add 1 more rep to each set.  
-  Then, once you can do 7-10 reps per set, you would need to add ~5% more weight (factoring bodyweight) and reset to ~5 reps/set. </p> 
+  Then, once you can do 7-10 reps per set, you would need to add ~5% more weight (factoring in bodyweight) and reset to ~5 reps/set. </p> 
   <p class="well">If training endurance, complete ~3 sets each with 10 reps. Take .5-1 minute rest between sets. 
-  You want to take shorter rests so that you work out your muscles to exhaustion.  
-  Also, you should do as many reps as you are able in the final set. 
+  You want to take shorter rests so that you eventually work out your muscles to exhaustion.  
+  Also, you should do as many reps as you are able to in the final set. 
   During the following week, you should try to add 1 more rep to each set.  
-  Then, once you can do 15-20 reps per set, you would need to add ~5% more weight (factoring bodyweight) and reset to ~10 reps/set</p> 
-  <p>Don't overexert yourself. This goes without saying but there are a lot of options at your disposal you're feeling overworked:
+  Then, once you can do 15-20 reps per set, you should add ~5% more weight (factoring in bodyweight) and reset to ~10 reps/set</p> 
+  <p>Don't overexert yourself. This goes without saying but there are a lot of options at your disposal if you're feeling overwhelmed:
   	</br>Reduce weight
   	</br>Switch to a different variation of the exercise
-  	</br>Hold in the contracted position (isometric)
+  	</br>Hold the contracted position (isometric)
   	</br>Come out of the contracted position slowly (perform a negative/eccentric)
   	</br>Stop the set
   </br>As you can see, there are many options that aren't even mutually exclusive that can keep you safe from injury but still keep your time-under-tension high per set (~40sec).
@@ -162,7 +162,7 @@ body {
         <td>Anterior</td>
       </tr>
        <tr>
-        <td>Leg-ups</td>
+        <td>Toes to Bar</td>
         <td>Easy</td>
         <td> Lower Abs</td>
       </tr>
@@ -183,8 +183,8 @@ body {
   Perform push-ups as you normally would, with your hands moving further apart as you go down.
   </br><span class="bold">X Push-ups: </span>These are almost a total-body exercise.  Assume a normal push-up position with your legs and arms spread wider than your shoulders.  
   Your arms should also be higher than shoulder height. Perform push-ups as you normally would. 
-  </br><span class="bold">Leg-ups: </span> Leg-ups will help your feet on roofs. Lie on the ground with your back touching it.  Lift your legs up and above your head.
-  Make sure to keep your lower back on the ground and visualize pulling your feet towards your head instead of flipping them over your waist.
+  </br><span class="bold">Toes to Bar: </span> Leg-ups will help your feet on roofs. Hang off of a bar and lift your legs up and above your head.
+  Make sure to engage your abs (posterior pelvic tilt) and visualize pulling your feet towards your head instead of flipping them over your waist.
   </br><span class="bold">Push-ups: </span>One would be remiss to not advise these.
   </p>
 </div>
