--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ body {
 	height: 100%
 }
 .jumbotron {
+	height: 600px
 	background-image: url("ClimbingFit2.png");
  	background-position: center;
  	background-repeat: no-repeat;
