--- a/index.html
+++ b/index.html
@@ -215,11 +215,23 @@ body {
         <td>Triceps, Pecs</td>
         <td>Mantling</td>
       </tr>
+	<tr>
+        <td>Ab Wheel Rollouts</td>
+        <td>Medium</td>
+        <td>Abs, Shoulders</td>
+        <td>Core Tension</td>
+      </tr>
       <tr>
         <td>Dragon Flags</td>
         <td>Hard</td>
         <td>Abs, Lats</td>
-        <td>Keeping Feet On</td>
+        <td>Core Tension</td>
+      </tr>
+	   <tr>
+        <td>Russian Twists</td>
+        <td>Easy</td>
+        <td>Obliques</td>
+        <td>Core Tension</td>
       </tr>
       <tr>
         <td>Planche Push-ups</td>
@@ -227,11 +239,18 @@ body {
         <td>Triceps, Pecs</td>
         <td>Pushing Strength</td>
       </tr>
+	<tr>
+        <td>Side Plank</td>
+        <td>Easy</td>
+        <td>Abs</td>
+        <td>Core Tension</td>
+      </tr>
+	    
       <tr>
         <td>Lying/Hanging Windshield Wipers</td>
         <td>Hard</td>
         <td>Obliques</td>
-        <td>Swinging Feet to Opposing Wall</td>
+        <td>Twisting</td>
       </tr>
     </tbody>
   </table>
@@ -275,6 +294,12 @@ body {
         <td>Easy</td>
         <td>Trapezius</td>
         <td>Ubiquitous</td>
+      </tr>
+	     <tr>
+        <td>I's Y's T's</td>
+        <td>Easy</td>
+        <td>Back</td>
+        <td>Antagonist</td>
       </tr>
       <tr>
         <td>Standing/Hanging Inverted Rows</td>
@@ -327,6 +352,12 @@ body {
     <tbody>
       <tr>
         <td>Assisted One-arm Pull-ups</td>
+        <td>Medium</td>
+        <td>Triceps</td>
+        <td>Ubiquitous</td>
+      </tr>
+	     <tr>
+        <td>Archer Pull-ups</td>
         <td>Medium</td>
         <td>Triceps</td>
         <td>Ubiquitous</td>
@@ -389,6 +420,11 @@ body {
     <tbody>
       <tr>
         <td>Butterfly</td>
+        <td>Easy</td>
+        <td>Adductors</td>
+      </tr>
+	    <tr>
+        <td>Frog Stretch</td>
         <td>Easy</td>
         <td>Adductors</td>
       </tr>
