--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-<style
-       #logo {
+<!--each table should be a sequence of progressions...-->
+<style>
+	#logo {
 	border: 2px solid black;
 }
 
@@ -62,9 +63,7 @@ body {
     text-align: center;
     text-decoration: none;
 }
-</style>
-<!--each table should be a sequence of progressions...-->
-
+	</style>
 
 
 
@@ -240,7 +239,6 @@ body {
         <td>Easy</td>
         <td> Lower Abs</td>
       </tr>
-        </tr>
        <tr>
         <td>Pull-ups</td>
         <td>Easy</td>
