--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 	height: 100%
 }
 .jumbotron {
-	background-image: url("ClimbingFit2.png");
+	background-image: url("ClimbingFit2.jpg");
  	background-position: center;
  	background-repeat: no-repeat;
  	background-size: cover;
@@ -27,7 +27,6 @@ body {
 
 .jumbotron h1 {
 	color: #fff
-	font-family: Impact;
 	letter-spacing: 2px
 	
 }
@@ -77,7 +76,6 @@ body {
 
 <link rel="stylesheet" type="css" href="Climbingdraft.css">
 <!-- Social Media buttons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body data-spy="scroll" data-offset="20">
