--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122864868-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-122864868-1');
+</script>
+
 <!--each table should be a sequence of progressions...-->
 <style>
 #logo {
