--- a/index.html
+++ b/index.html
@@ -258,13 +258,17 @@ body {
   	Stand between the rings and push down on them hard. 
   	Once this engages your muscles, jump off the ground and hold yourself up in this mantling position 
   	(similar to movement you use when getting out of a pool via the side).
+	  <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/iODfBpAI2hc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   	</br><span class="bold">Ring Push-ups:</span> With the rings shoulder-width apart and a few inches off the ground, get into a push-up position with the ring openings facing towards you.
   	Perform push-ups as you normally would, with your hands moving further apart as you go down.
+	<iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/7enjS7Y2LYc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   	</br><span class="bold">X Push-ups: </span>These are almost a total-body exercise.  Assume a normal push-up position with your legs and arms spread wider than your shoulders.  
   	Your arms should also be higher than shoulder height. Perform push-ups as you normally would. 
+	<iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/IOQjVhXOEeo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   	</br><span class="bold">Leg-ups: </span> Leg-ups will help your feet on roofs. Lie on the ground with your back touching it.  Lift your legs up and above your head.
   	Make sure to keep your lower back on the ground and visualize pulling your feet towards your head instead of flipping them over your waist.
-  	</br><span class="bold">Pull-ups: </span>One would be remiss to not advise these.
+  	<iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/HdI4Xwm3RNw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	</br><span class="bold">Pull-ups: </span>One would be remiss to not advise these.
   	</p>
   	</div>
   </div>
@@ -305,7 +309,7 @@ body {
         <td>Abs, Lats</td>
       </tr>
       <tr>
-        <td>Planche Push-ups</td>
+        <td>Pseudo Planche Push-ups</td>
         <td>Medium</td>
         <td>Triceps, Pecs</td>
       </tr>
@@ -341,7 +345,8 @@ body {
   In this way, they stay roughly shoulder-width apart as you go down. This will target your abs more than the normal Flies.
   </br><span class="bold">Ring Dips: </span>These are much harder than normal dips and it is recommended you flare the rings out each time you reach the top of the movement.
   </br><span class="bold">Dragon Flags: </span>Dragon Flags are extremely difficult so one should work up to them using leg-ups and negatives.
-  </br><span class="bold">Planche Push-ups: </span>This an easily-adjustable gymnastics exercise that builds pushing power.
+  </br><span class="bold">Pseudo Planche Push-ups: </span>This an easily-adjustable gymnastics exercise that builds pushing power.
+<iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/NU2MB0Fl2UI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </p>
   </div>
   </div>
@@ -441,11 +446,7 @@ body {
         <td>Medium</td>
         <td>Triceps</td>
       </tr>
-      <tr>
-        <td>Muscle-ups</td>
-        <td>Medium</td>
-        <td>Triceps</td>
-      </tr>
+    
       <tr>
         <td>Weight Ring Hold</td>
         <td>Medium</td>
@@ -456,13 +457,23 @@ body {
         <td>Medium</td>
         <td>Hands</td>
       </tr>
+	   <tr>
+        <td>Partner Pull-ups</td>
+        <td>Medium</td>
+        <td>Triceps</td>
+      </tr>
     </tbody>
   </table>
   <button data-toggle="collapse" data-target="#myCollapsible3" class="btn btn-warning">Show/Hide Details</button>
     <div id="myCollapsible3" class="collapse">
   <p>
   <span class="bold">Type-writers: </span> While lock-off strength is important it is debatable whether simply doing it is the best way of improving it.
-  </br><span class="bold">Bar to Chest: </span> These are pull-ups that are dynamic and build explosive power.
+ <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/fTP7rupsLCg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+	  <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/GTb8KALJl4E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+	</br><span class="bold">Bar to Chest: </span> These are pull-ups that are dynamic and build explosive power.
+	</br><span class="bold">Partner Pull-ups: </span> These are pull-ups that are dynamic and build explosive power.
   </br><span class="bold">One-arm Pull-up: </span> While difficult, make sure you squeeze the bar as hard as you can, start with your body perpendicular to the bar, and fold your body inwards.
   </p>
 
@@ -652,3 +663,4 @@ rjk244@cornell.edu
 
 </body>
 </html>
+
